akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/invalid/TimedActionWithFunctionTool.java
package com.example;

import akka.javasdk.annotations.Component;
import akka.javasdk.annotations.FunctionTool;
import akka.javasdk.timedaction.TimedAction;

@Component(id = "timed-action-with-function-tool")
public class TimedActionWithFunctionTool extends TimedAction {

  @FunctionTool(description = "This should not be allowed")
  public Effect doSomething() {
    return effects().done();
  }
}
